--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "randomstring": "^1.3.0"
   }
 }
